# Jieqi

./: .gitignore  LICENSE.md  README.md  board.json  board_BLACK.json  board_RED.json  diff.txt  elephantfish_pvs.py  elephantfish_pvs_20210526.py  elephantfish_pvs_20210528_fixed.py  elephantfish_pvs_v1.py  elephantfish_pvs_v3.py  elephantfish_pvs_v4.py  gui.py  musesfish_mtd_20210824.py  musesfish_pvs.py  musesfish_pvs_20210528_fixed.py  musesfish_pvs_20210529_fixed.py  musesfish_pvs_20210531_fixed.py  musesfish_pvs_20210601.py  musesfish_pvs_20210604.py  musesfish_pvs_20210604_fixed_2.py  musesfish_pvs_20210815.py  musesfish_pvs_exp.py  musesfish_pvs_v1_fixed.py  musesfish_pvs_v2_fixed.py  test_board.py  test_board2.py  test_board_uncertainty.py  test_reference.py
board/: ALL_ZERO_TUPLE.txt  board.py  board_v1.py  common.py  common_20210527.py  common_20210529_fixed.py  (+6 more)
cppjieqi/: CMakeLists.txt  README.md  kaijuku  main.cpp  players.conf  score.conf
cppjieqi/board/: aiboard.cpp  aiboard.h  aiboard1.cpp  aiboard1.h  aiboard2.cpp  aiboard2.h  aiboard3.cpp  aiboard3.h  aiboard4.cpp  aiboard4.h  aiboard5.cpp  aiboard5.h  board.cpp  board.h  god.cpp  god.h  human.cpp  human.h  thinker.h
cppjieqi/global/: global.cpp  global.h
cppjieqi/helper/: helper.cpp  helper.h
cppjieqi/log/: log.cpp  log.h
cppjieqi/score/: score.cpp  score.h
cppjieqi2/: CMakeLists.txt  README.md  main.cpp  players.conf
cppjieqi2/board/: aiboard4.cpp  aiboard4.h  board.cpp  god.cpp  god.h  human.cpp  human.h  thinker.h
cppjieqi2/global/: global.cpp  global.h
cppjieqi2/score/: score.h
(+6 files in other folders)
